2007-02-20  Jose Dapena Paz  <jdapena@igalia.com>

	* src/apt-worker-client.cc: now status_fd is global. This fixes
	an error that happend when we couldn't get all the fd's in the 
	same call to try_apt_worker (it happens frequently, at least
	if you don't use valgrind and then startup and iterations
	happen quickly).

	* src/apt-worker-client.cc (must_open): now must_open removes
	O_NONBLOCK, as app manager depends on blocking calls from now
	on.

	* src/apt-worker-client.cc (try_apt_worker_start, main):
	now all initalization of fd's (statusfd, log_from_fd) is done
	after success of apt-worker init.

2007-02-20  Jose Dapena Paz  <jdapena@igalia.com>

	* apt-worker-client.cc (try_apt_worker_start): fix a very silly
	bug (bad parenthesis in conditions) that made startup
	break completely. Now the feature is working again.

	* apt-worker-client.cc (start_apt_worker): removed comment
	about using O_NONBLOCK, as now it's using it.

2007-02-20  Jose Dapena Paz  <jdapena@igalia.com>

	More reliable startup of apt-worker:

	* apt-worker-client.cc: added functions cancel_apt_worker_start
	and try_apt_worker_start to make apt-worker initialisation
	asynchronous. This prevents locks of app manager on startup.
	Now it waits 3 seconds trying to start the apt-worker before
	giving up. Then it returns to the GUI, letting user read the
	log (all the other functions don't work).

	* main.cc (main): added start_apt_worker_reply callback and added
	asynchronous support for apt-worker initialization, as offered in
	apt-worker-client.

2007-02-20  Marius Vollmer  <marius.vollmer@nokia.com>

	* Makefile.am (install-data-local): Create empty catalogues file
	when it doesn't exist.

2007-02-19  Jose Dapena Paz  <jdapena@igalia.com>

	* src/apt-worker.cc (cmd_save_applications_install_file): leak
	fixes (string arrays of package names and deb lines were not
	freed).

	* src/util.cc (really_cancel_response): do gtk_main_quit instead
	of exit(1) to do a cleaner close of the application.
